# sopel-climacell

./: README.md  setup.cfg  setup.py
sopel_climacell/: plugin.py
