[metadata]
name = sopel-climacell
version = 0.1.0
description = A weather plugin for Sopel using ClimaCell API
author = cottongin
author_email = cottongin@cottongin.xyz
url = https://github.com/cottongin/sopel-climacell
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.0,<8
    requests

[options.entry_points]
sopel.plugins =
    climacell = sopel_climacell.plugin
